# autodocs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  config.example.yaml  plan-detection-improvements.md  plan-feedback-loop.md  plan-output-trust.md  plan-production-readiness-v2.md  plan-production-readiness.md  plan-repo-diversity.md  plan-sync-refactor.md  pyproject.toml  review-prompt-detection-improvements.md  review-prompt-failure-modes.md  review-prompt-feedback-loop.md  review-prompt-output-trust-followup.md  review-prompt-output-trust.md  review-prompt-production-readiness-v2.md  review-prompt-production-readiness.md  review-prompt-repo-diversity.md  review-synthesis-detection-improvements.md  review-synthesis-failure-modes.md  review-synthesis-feedback-loop.md  review-synthesis-output-trust-followup.md  review-synthesis-output-trust.md  review-synthesis-production-readiness-v2.md  review-synthesis-production-readiness.md  review-synthesis-repo-diversity.md  setup.sh
docs/: architecture.md  configuration.md  feedback-roadmap.md  migration.md  pr-guide.md  troubleshooting.md
scripts/: apply_engine.py  autodocs_types.py  claude_runner.py  config-helper.py  drift-helper.py  feedback-helper.py  generate.py  llm_runner.py  match-helper.py  orchestrator.py  pipeline-helper.py  platform_helper.py  schema_helper.py  stale-helper.py  storage.py  sync_engine.py  verify-helper.py  webhook_server.py
templates/: apply-prompt.md  autodocs-workflow.yml  com.autodocs.structural-scan.plist  com.autodocs.sync.plist  drift-prompt.md  generate-prompt.md  sync-prompt.md  (+5 more)
(+38 files in other folders)
