[project]
name = "autodocs"
version = "0.1.0"
description = "Automated documentation drift detection"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["anthropic>=0.30.0"]
webhook = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
